# laser-demo

./: Cargo.toml  LICENSE  README
assets/: boat.mtl  boing.mtl  decal.mtl  edo.mtl  flat.mtl  m100.mtl  manse.mtl  music.xm  tgv.mtl
assets-src/: ocean.blend
src/: bufferedsource.rs  demo.rs  fluid.rs  lib.rs  main.rs  model.rs  resources.rs  shaderpass1.wgsl  shaderpass_cd_render.wgsl  shaderpass_cdrender.wgsl  shaderpass_ocean.wgsl  shaderpass_simple.wgsl  shaderpass_smokerender.wgsl  shaderpass_starwars1.wgsl  shaderpass_starwars2.wgsl  shaderpassfinal.wgsl  smoke_compute.wgsl  texture.rs
