[package]
name = "laser-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
wgpu = "0.17"
winit = "0.28"
rand = { version = "0.8", features = ["small_rng"]}
xmrsplayer = "0.2"
rodio = "0.17"
xmrs = "0.3"
cpal = "0.15.2"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[profile.release]
#strip = true
opt-level = "z"
panic = "abort"
debug = true