[package]
name = "laser-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "=0.3.67", features = [ "HtmlInputElement"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
console_log = "*"
console_error_panic_hook = "*"
pollster = "0.3"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
wgpu = { git="https://github.com/gfx-rs/wgpu" }
winit = "0.29"
getrandom = { version = "*", features = ["js"] }
rand = { version = "*", features = ["small_rng"]}
#xmrsplayer = "0.2"
#rodio = "0.17"
#xmrs = "0.3"
#cpal = "0.15.2"
cfg-if = "*"
web-time = "1"
include_dir = "0.7"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[profile.dev]
opt-level = 3

[profile.release]
debug-assertions = false
strip = true
panic = "abort"
opt-level = "s"
debug = true
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"
